[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-moderation"
version = "1.0.0"
description = "AI-Powered Misinformation Moderation Environment"
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "pydantic>=2.0",
    "openai>=1.0",
    "fastapi>=0.100",
    "uvicorn>=0.20",
    "openenv-core>=0.1.0"
]

[project.scripts]
server = "server.app:main"

[tool.setuptools.packages.find]
include = ["env*", "server*"]
